Updates to unified schema

--- a/CytoScapeSchemaViewer/ACED_BMEG_Unified/CopyNumberAlteration.yaml
+++ b/CytoScapeSchemaViewer/ACED_BMEG_Unified/CopyNumberAlteration.yaml
@@ -1,13 +1,15 @@
-$id: Methylation
+$id: CopyNumberAlteration
 $schema: https://json-schema.org/draft/2020-12/schema
-description: Methylatyion values for an aliquot - Methylatyion is the covalent chemical
-  or biochemical addition of a methyl group(s) to a compound.
+description: Gene level copy number estimates for an aliquot. Variation in the number
+  of copies of a particular sequence within the genetic material of an individual.
+  Large-scale copy number polymorphisms are common and widely distributed in the human
+  genome.
 links:
 - href: Specimen/{id}
   rel: specimen_Specimen
   targetHints:
     backref:
-    - specimen_methylation
+    - specimen_copynumberalteration
     directionality:
     - outbound
     multiplicity:
@@ -31,18 +33,15 @@ properties:
   method:
     element_property: true
     type: string
-  metric:
-    element_property: true
-    type: string
   projectId:
     element_property: true
     type: string
   resourceType:
-    default: methylation
+    default: copy_number_alteration
     description: One of the resource types defined as part of BMEG
     type: string
   specimen:
-    backref: specimen_methylation
+    backref: specimen_copynumberalteration
     element_property: true
     items:
       $ref: Specimen.yaml
@@ -59,13 +58,13 @@ properties:
     type: string
   values:
     additionalProperties:
-      type:
-      - number
-      - 'null'
+      type: number
     element_property: true
+    propertyNames:
+      pattern: ^ENSG[0-9]+
     type: object
 required:
 - submitterId
 - projectId
-title: Methylation
+title: CopyNumberAlteration
 type: object
