--- a/tests/integration/data/config.yaml
+++ b/tests/integration/data/config.yaml
@@ -15,7 +15,7 @@ dependency_order:
   # FHIR objects
   #
   - Organization
-  - Location
+#  - Location
   - Practitioner
   - PractitionerRole
   - ResearchStudy
@@ -23,18 +23,21 @@ dependency_order:
   - ResearchSubject
   - Substance
   - Specimen
-  - Encounter
+#  - Encounter
   - Observation
   - DiagnosticReport
   - Condition
   - Medication
   - MedicationAdministration
+#  - MedicationStatement
+#  - MedicationRequest
   - Procedure
   - DocumentReference
   - Task
+  - ImagingStudy
   - FamilyMemberHistory
   - BodyStructure
-  - Immunization
+#  - Immunization
 
 
 # Properties to 'pluck' from nested objects and render in the parent object
@@ -52,6 +55,9 @@ nested_objects:
   Task:
     - input.valueReference
     - output.valueReference
+  Medication:
+    - ingredient.item
+
 
 # Specify which entities you want to add to a FHIR entities model
 extensions:
@@ -78,10 +84,56 @@ limit_links:
   DocumentReference:
     - Patient
     - Specimen
+    - ResearchStudy
+    - Observation
+  Practitioner: []
+  ResearchStudy:
+    - Project
+    - ResearchStudy
+  FamilyMemberHistory:
+    - Patient
+  Procedure:
+    - Patient
+    - Practitioner
+    - Procedure
+  MedicationAdministration:
+    - Patient
+    - Medication
 
 # Add these extra properties to the simplified schema
 # These may be used to add extra scalar properties to the simplified schema as well as constrain edge destination types.
 extra_properties:
+
+  Patient:
+    us_core_race_ombCategory_coding:
+      description: extension
+      type: array
+      items:
+        type: string
+    us_core_ethnicity_ombCategory_coding:
+      description: extension
+      type: array
+      items:
+        type: string
+    us_core_race_text:
+      description: extension
+      type: string
+    patient_birthPlace_resourceType:
+      description: nested
+      type: string
+    patient_birthPlace_city:
+      description: nested
+      type: string
+    us_core_ethnicity_text:
+      description: nested
+      type: string
+    patient_birthPlace_state:
+      description: nested
+      type: string
+    patient_birthPlace_country:
+      description: nested
+      type: string
+
 
   # Add gen3 file scaffolding expected properties
   DocumentReference:
@@ -116,8 +168,36 @@ extra_properties:
 #        description: from content attachment
     # from denormalization
     patient_id:
+      type: string
+      description: Denormalized patient id
+    patient_identifier:
+      description: Denormalized patient identifier
+      type: array
+      items:
         type: string
-        description: Denormalized patient id
+    specimen_identifier:
+      description: Denormalized specimen identifier
+      type: array
+      items:
+        type: string
+    task_identifier:
+      description: Denormalized task identifier
+      type: array
+      items:
+        type: string
+
+
+    subject:
+      description: Who/what is the subject of the document.
+      $ref: Reference.yaml
+      backref: subject_DocumentReference
+      enum_reference_types:
+      - ResearchStudy
+      - Patient
+      - Specimen
+      - Observation
+      title: The item that this DocumentReference is about.
+
 
   # a link that does not exist in the FHIR schema, in this case from ResearchStudy to Project
   ResearchStudy:
@@ -128,6 +208,7 @@ extra_properties:
       enum_reference_types:
       - Project
       title: The Gen3 project this study belongs to.
+
 
   # Create edges from references typed as ANY
   # In this case Task we hint that Task inputs will point to Specimen and outputs point to DocumentReferences
@@ -165,6 +246,21 @@ extra_properties:
         $ref: Reference.yaml
       title: What the observation is about, when it is not about the subject of record
       type: array
+    patient_identifier:
+      description: Denormalized patient identifier
+      type: array
+      items:
+        type: string
+    specimen_identifier:
+      description: Denormalized specimen identifier
+      type: array
+      items:
+        type: string
+    condition_identifier:
+      description: Denormalized condition identifier
+      type: array
+      items:
+        type: string
 
   # add a link from a sub-object collection.bodySite
   Specimen:
@@ -182,7 +278,11 @@ extra_properties:
       enum_reference_types:
       - BodyStructure
       title: Anatomical collection site
-
+    patient_identifier:
+      description: Denormalized patient identifier
+      type: array
+      items:
+        type: string
 
 # Add a `category` field to the simplified schema: defaults to Clinical
 categories:
